src/objects/KPI_Result__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Message__c</fullName>
        <label>Alert Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Review__c</fullName>
        <label>Project Review</label>
        <referenceTo>ProjectReview__c</referenceTo>
        <relationshipLabel>KPI Results</relationshipLabel>
        <relationshipName>KPI_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>KPI Result</label>
    <nameField>
        <displayFormat>Result-{0}</displayFormat>
        <label>KPI Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>